--- a/todo/src/index.css
+++ b/todo/src/index.css
@@ -50,3 +50,11 @@ button{
   border: none;
   font-weight: bold;
 }
+
+.add-panel{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin: 25px;
+}
